--- a/test/nginx.conf
+++ b/test/nginx.conf
@@ -9,6 +9,10 @@ http {
 	init_by_lua "monitor = require 'monitor'";
 	log_by_lua "monitor.incr(ngx.var.uri)";
 
+	upstream backend {
+		server 127.0.0.1:7070;
+	}
+
     server {
         listen 7070 default;
         location /status {
@@ -23,12 +27,21 @@ http {
 			return 404 "error";
         }
 
+		location /internal {
+			content_by_lua "ngx.sleep(0.3); ngx.say('internal')";
+		}
+
 		location /store {
 			content_by_lua "
 				local store = require 'store'
 				local json = require 'cjson'
 				ngx.say(json.encode(store.getAll()))
 			";
+		}
+
+		location /upstream {
+			proxy_set_header Host internal.com;
+			proxy_pass http://backend/internal;
 		}
     }
 }
