add pretty number and group

--- a/test/nginx.conf
+++ b/test/nginx.conf
@@ -7,7 +7,8 @@ http {
     lua_package_path '/tmp/?.lua;;';
 	lua_shared_dict store 10m; # rely on store.lua
 	init_by_lua "monitor = require 'monitor'";
-	log_by_lua "monitor.incr(ngx.var.uri)";
+	# log_by_lua "monitor.group(ngx.var.uri)";
+	log_by_lua "monitor.group_by_path(1); monitor.group_by_host()";
 
 	upstream backend {
 		server 127.0.0.1:7070;
